--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
-    "hono": "^4.10.1"
+    "@hono/zod-validator": "^0.7.4",
+    "hono": "^4.10.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
