--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-	"name": "trendi",
-	"private": true,
-	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"lint": "turbo run lint",
-		"start": "turbo run start",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"check-types": "turbo run check-types",
-		"build:web": "turbo run build --filter=web",
-		"build:api": "turbo run build --filter=api",
-		"dev:web": "turbo run dev --filter=web",
-		"dev:api": "turbo run dev --filter=api",
-		"start:web": "turbo run start --filter=web",
-		"start:api": "turbo run start --filter=api",
-		"lint:web": "turbo run lint --filter=web",
-		"lint:api": "turbo run lint --filter=api",
-		"format:web": "turbo run format --filter=web",
-		"format:api": "turbo run format --filter=api"
-	},
-	"devDependencies": {
-		"prettier": "^3.6.2",
-		"turbo": "^2.5.8",
-		"typescript": "5.9.2"
-	},
-	"packageManager": "pnpm@9.0.0",
-	"engines": {
-		"node": ">=18"
-	}
+  "name": "trendi",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "start": "turbo run start",
+    "format": "biome format --write",
+    "check-types": "turbo run check-types",
+    "build:web": "turbo run build --filter=web",
+    "build:api": "turbo run build --filter=api",
+    "dev:web": "turbo run dev --filter=web",
+    "dev:api": "turbo run dev --filter=api",
+    "start:web": "turbo run start --filter=web",
+    "start:api": "turbo run start --filter=api",
+    "lint:web": "turbo run lint --filter=web",
+    "lint:api": "turbo run lint --filter=api",
+    "format:web": "turbo run format --filter=web",
+    "format:api": "turbo run format --filter=api"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "turbo": "^2.5.8",
+    "typescript": "5.9.2"
+  },
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=20"
+  }
 }
